correcting cell alignment defaults

--- a/src/scss/tables.scss
+++ b/src/scss/tables.scss
@@ -389,7 +389,7 @@ tbody {
 
 th, td {
   font-size: 12px;
-  text-align: left;
+  text-align: right;
   padding: 9px 8px;
 
   // &:first-child {
